Added cupcake to brand name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header id="header">
 
         <div class="brand-name">
-            <h1><span>Anita's </span> Cakes and Pastries </h1>
+            <h1><span>Anita's <img class="cupcake" src="https://cdn0.iconfinder.com/data/icons/cup-cakes/50/17-512.png"></span> Cakes and Pastries </h1>
+          
 
 
         </div>
