Adding credits in footer section

--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
         <a href="#header"><img class="top"
                 src=" https://icons.veryicon.com/png/o/miscellaneous/offerino-icons/arrow-up-45.png"
                 alt="image of arrow up"></a>
+                <br>
+                <p class="credits">This is a demo site for learning purposes</p>
+                <p class="credits">Images from:&nbsp;&nbsp;https://www.laroccacakes.com&nbsp;&nbsp; https://www.papanaretos.gr &nbsp; &nbsp; https://media.mallorca-touristguide.com</p>
     </footer>
 
 
